@@ -1,7 +1,11 @@
+2014-08-22  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>
+
+	* texmfmp.c: Support multibyte filenames in pipe (Windows only)
+
 2014-07-23  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>
 
 	* texmfmp.c: Short-file-name convention is incompatible with
-	--src-specials (w32 only).
+	--src-specials (Windows only).
 
 2014-07-21  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>
 
